...
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar" />

    <Button
        android:id="@+id/btnContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button_greenish"
        android:text="@string/use_your_contacts_list"
        android:textColor="@color/lightBlack"
...
