<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="context_menu">
        <item>View Profile</item>
        <item>Remove</item>
    </string-array>
</resources>