<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.InvitationConfirmationActivity">

    <include
        android:id="@+id/top_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/confirmationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_app_bar"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your sms text invitation has been sent. You will be notified when your contact will register to the application"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <Button
        android:id="@+id/returnHome"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/confirmationMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/rounded_button_greenish"
        android:text="Return to Home page"
        android:textColor="@color/lightBlack"
        tools:ignore="HardcodedText" />

</RelativeLayout>
