...
        android:text="noteText"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />


    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="Phone Number"
        android:inputType="phone"
...
            android:text="@string/cancel"
            android:textColor="@color/lightBlack"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_reddish"
            android:text="@string/send_sms"
            android:textColor="@color/lightBlack"
...
